Updated README regarding YAML support