@@ -7,12 +7,14 @@
 [![Travis build status](https://travis-ci.org/mibexsoftware/bamboo-plan-dsl-plugin.svg?branch=master)](https://travis-ci.org/mibexsoftware/bamboo-plan-dsl-plugin)
 
 
-Note that this repository only contains the source for the plan DSL which allows you write your build
+Note that this repository only contains the source for the plan DSL and YAML support which allows you write your build
 plan configurations with autocompletion, syntax highlighting and documentation in your IDE. The 
 [Bamboo plug-in](https://marketplace.atlassian.com/plugins/ch.mibex.bamboo.plandsl) itself is available at the 
 Atlassian Marketplace. 
 
-For more information, please consult our [wiki](https://github.com/mibexsoftware/bamboo-plan-dsl-plugin/wiki).
+For more information, please consult our [wiki](https://github.com/mibexsoftware/bamboo-plan-dsl-plugin/wiki). For
+questions regarding the Groovy-based DSL/YAML syntax, please see the
+[API documentation](https://mibexsoftware.github.io/bamboo-plan-dsl-plugin/).
 
 ## Motivation
 We once decided to tag the latest commit of a new release whenever we ship our software to production. Adding the 
@@ -21,19 +23,19 @@ through the configuration UI of every build plan. Also, we didn't have the possi
 configurations to a specific state and we were not able to see what has changed since the last working configuration.
 This was the time where we decided to build this plug-in.
 
-The Atlassian Bamboo plug-in allows you to specify your build plan configurations with a Groovy-based DSL. It is 
+The Atlassian Bamboo plug-in allows you to specify your build plan configurations with a Groovy-based DSL or YAML. It is
 conceptually similar and inspired by the well-known Job DSL plug-in for Jenkins. By using Groovy, you have the 
-flexibility of a programming language that is well-known for its strong meta-programming and scripting support. With our
-Groovy-based DSL, you can textually describe your build plans and all its associated Bamboo concepts like stages, jobs, 
-tasks, build variables, etc. Here's an example of a simple build plan with an associated deployment project:
+flexibility of a programming language that is well-known for its strong meta-programming and scripting support. By using
+the alternative YAML syntax, you have a very lightweight textual description of your build plans and deployment projects.
+
+With our Groovy-based DSL and YAML syntax, you can textually describe your build plans and all its associated Bamboo
+concepts like stages, jobs, tasks, build variables, etc. Here's a Groovy-based DSL example of a simple build plan with
+an associated deployment project:
 
 ```groovy
 project(key: 'MYPROJECT', name: 'My project') {
     plan(key: 'MYPLAN', name: 'My plan') {
         stage(name: 'My stage') {
-            description 'My stage'
-            manual false
-
             job(key: 'BUILD', name: 'Maven build job' ) {
                 tasks {
                     maven3x(goal: 'install') {
@@ -56,6 +58,34 @@ project(key: 'MYPROJECT', name: 'My project') {
 }
 ```
 
+And here comes the same configuration, but this time using the YAML support:
+
+```yml
+project:
+  key: MYPROJECT
+  name: My project
+  plans:
+    - key: MYPLAN
+      name: My plan
+      stages:
+        - name: My stage
+          jobs:
+            - key: BUILD
+              name: Maven build job
+              tasks:
+                - !maven3x
+                  goal: install
+                  description: build plug-in
+                  executable: maven323
+                  buildJdk: jdk8
+                  environmentVariables: MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m"
+      deploymentProjects:
+              - name: my deployment project
+                environments:
+                  - name: staging
+                  - name: prod
+```
+
 By applying configuration as code with our plug-in, you will always able to go back in the history of your DSL repository
 when a build breaks. And you spend less time clicking through the dozens of configuration screens the Bamboo UI 
 provides. And last but not least, it is also much more fun to hack your build plans :-)
@@ -64,11 +94,11 @@ provides. And last but not least, it is also much more fun to hack your build pl
 ## Basic usage
 See the [wiki](https://github.com/mibexsoftware/bamboo-plan-dsl-plugin/wiki) for more details and examples.
 
-1. Write your plan Groovy DSL files in your favourite IDE with syntax highlighting, code completion and documentation.
+1. Write your plan Groovy DSL or YAML files in your favourite IDE with syntax highlighting, code completion and documentation.
 [See the wiki instructions on this](https://github.com/mibexsoftware/bamboo-plan-dsl-plugin/wiki/IDE-support).
-2. Add the plug-ins **seed task** to a build plan and reference the DSL files from the plan's associated repository.
+2. Add the plug-ins **seed task** to a build plan and reference the DSL/YAML files from the plan's associated repository.
 3. When you run the plan with the seed task, the plug-in will automatically create and update all plans specified
-   in the DSL files. You can see which plans got created/updated on the build summary page.
+   in the DSL/YAML files. You can see which plans got created/updated on the build summary page.
    
    
 ## Artifacts
